--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     
         <title>Vizzual Lab</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Baixe o melhor Modelo HTML de Portfólio Criativo em 2025">
+    <meta name="description" content="Transformamos ideias em soluções digitais sob medida HTML de Portfólio Criativo em 2025">
     <meta name="author" content="ClaPat Studio">
     <meta charset="UTF-8">    
     <link rel="icon" type="image/ico" href="favicon.ico">
