--- a/index.html
+++ b/index.html
@@ -31,12 +31,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Baixe o melhor Modelo HTML de Portfólio Criativo em 2025"
-    />
-    <meta name="author" content="ClaPat Studio" />
-    <meta
-      property="og:image"
-      content="http://bennet.clapat.com/prez/01_preview.png"
+      content="Transformamos ideias em soluções digitais sob medida HTML de Portfólio Criativo em 2025"
     />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/ico" href="favicon.ico" />
