--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Transformamos ideias em soluções digitais sob medida HTML de Portfólio Criativo em 2025"
+      content="Transformamos ideias em soluções digitais sob medida."
     />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/ico" href="favicon.ico" />
