--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                             <a
                               class="ajax-link"
                               data-type="page-transition"
-                              href="about.html"
+                              href="404.html"
                               ><div class="button-text sticky right">
                                 <span data-hover="Leia Mais">Leia Mais</span>
                               </div></a
