--- a/index.html
+++ b/index.html
@@ -375,13 +375,13 @@
                                 <i class="fa-solid fa-arrow-right"></i>
                               </div>
                             </div>
-                            <a
+                            <!-- <a
                               class="ajax-link"
                               data-type="page-transition"
                               href="404.html"
                               ><div class="button-text sticky right">
                                 <span data-hover="Leia Mais">Leia Mais</span>
-                              </div></a
+                              </div></a -->
                             >
                           </div>
                         </div>
